--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+Babel==2.5.1
+blinker==1.4
 click==6.7
 Flask==0.12.2
+Flask-BabelEx==0.9.3
+Flask-Login==0.4.0
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+passlib==1.7.1
 psycopg2==2.7.3.1
+pytz==2017.2
+speaklater==1.3
 SQLAlchemy==1.1.14
 Werkzeug==0.12.2
+WTForms==2.1
