--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Babel==2.5.1
+bcrypt==3.1.4
 blinker==1.4
+cffi==1.11.2
 click==6.7
 Flask==0.12.2
 Flask-BabelEx==0.9.3
@@ -13,9 +15,13 @@ gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+numpy==1.13.3
+opencv-python==3.3.0.10
 passlib==1.7.1
 psycopg2==2.7.3.1
+pycparser==2.18
 pytz==2017.2
+six==1.11.0
 speaklater==1.3
 SQLAlchemy==1.1.14
 Werkzeug==0.12.2
